Date: 2021.01.xx
  Info:
    - Moved the following functions/ tables into omnimatters namespace
    - (from omni.fname to omni.matter.fname) :
    - omnisource, omnitial, omnifluid, add_resource(), remove_resource(), add_fluid(),
    - remove_fluid(), get_ore_tier(), set_ore_tier(), add_initial(), add_omniwater_extraction()
  Bugfixes:
    - Fixed that omnitiles used the stone path transitions
---------------------------------------------------------------------------------------------------
Version: 4.1.7
Date: 2021.01.08
  Bugfixes:
    - Fixed that the output of electric offshore pumps of some mods like K2 was not
    -   - changed to omnic water
---------------------------------------------------------------------------------------------------
Version: 4.1.6
Date: 2021.01.03
  Changes:
    - Changed the omnicium gear wheel normal difficulty recipe from 2i n-->2 out to 1 in-->1 out
  Bugfixes:
    - Fixed that stone loot was not replaced on all rocks with omnite
    - Fixed that water omnitraction tech cost was pretty low
    - Fixed that the last two levels of extraction techs got cheaper
---------------------------------------------------------------------------------------------------
Version: 4.1.5
Date: 2020.12.27
  Changes:
    - Added support for Krastorio2 + Angels
  Bugfixes:
    - Fixed that Bob´s omnicium alloys were created too late to work with Py
---------------------------------------------------------------------------------------------------
Version: 4.1.4
Date: 2020.12.23
  Changes:
    - Properly localised omnic water recycling recipes (searchable now!)
    - Moved omnic water recycling recipes into their own item group
    - Moved extraction resource additions to the data stage
    - Added omni.matter.remove_resource(name) and omni.matter.remove_fluid(name)
    - Added omni.matter.get_ore_tier(name) and omni.matter.set_ore_tier(name,tier)
    - Added omni.matter.add_initial(ore_name,ore_amount,omnite_amount) to add initial omnitractions